fix:spacing and making responsive

--- a/project-JSON/style.css
+++ b/project-JSON/style.css
@@ -34,8 +34,9 @@ body{
 .container{
    display: grid;
    grid-template-columns: repeat(5,1fr);
-   gap:20px;
-   margin: 60px;
+   justify-items:center ;
+   row-gap: 10px;
+   width: 100%;
    
 }
 .card-container{
@@ -43,7 +44,7 @@ body{
     flex-direction: column;
     align-items: center;
     background-color:var(--secondary);
-    width: 200px;
+    width: 170px;
     gap:20px;
     height: fit-content;
     justify-content: center;
@@ -61,7 +62,6 @@ body{
 .project-img{
     width: 140px;
     height: 63px;
-    margin-right: 20px;
     border-radius: 10px;
 }
 h1{
@@ -97,4 +97,20 @@ button:hover{
 }
 button:active{
   color: #e02f18;
+}
+@media screen and (max-width:768px)  {
+    .container{
+      grid-template-columns: repeat(3,1fr);
+    }
+}
+@media screen and (max-width:425px)  {
+    .container{
+      grid-template-columns: repeat(2,1fr);
+    }
+    .card-container{
+        width: 128px;
+    }
+    .project-img{
+        width: 127px;
+    }
 }
